--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -9,5 +9,8 @@
     <li>
       <a [routerLink]="['/signup']">Inscription</a>
     </li>
+    <li>
+      <a [routerLink]="['/dev']">Developpeur</a>
+    </li>
   </ul>
 </nav>
