--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -12,5 +12,8 @@
     <li>
       <a [routerLink]="['/dev']">Developpeur</a>
     </li>
+    <li>
+      <a [routerLink]="['/onomatopoeia']">Onomatopées</a>
+    </li>
   </ul>
 </nav>
