--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -15,5 +15,8 @@
     <li>
       <a [routerLink]="['/onomatopoeia']">Onomatopées</a>
     </li>
+    <li>
+      <a [routerLink]="['/kitten']">Chats</a>
+    </li>
   </ul>
 </nav>
