--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -18,5 +18,8 @@
     <li>
       <a [routerLink]="['/kitten']">Chats</a>
     </li>
+    <li>
+      <a [routerLink]="['/cocktail']">Cocktails</a>
+    </li>
   </ul>
 </nav>
