--- a/src/app/cocktail-list/cocktail-list.component.html
+++ b/src/app/cocktail-list/cocktail-list.component.html
@@ -1,5 +1,5 @@
 <h1>Les Cocktails</h1>
-<div class="container" *ngFor="let cocktail of cocktailList">
+<div class="container" *ngFor="let cocktail of cocktails">
     <div>
         <div class="titleCocktail">
             <h3>{{cocktail.name}}</h3>
