--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -24,5 +24,8 @@
     <li>
       <a [routerLink]="['/nasa']">NASA</a>
     </li>
+    <li>
+      <a [routerLink]="['/form']">Reactive Form</a>
+    </li>
   </ul>
 </nav>
