--- a/src/app/pages/cocktail-list/cocktail-list.component.html
+++ b/src/app/pages/cocktail-list/cocktail-list.component.html
@@ -1,5 +1,5 @@
 <h1>Les Cocktails</h1>
-<div class="container" *ngFor="let cocktail of cocktails">
+<article class="container" *ngFor="let cocktail of cocktails">
     <div>
         <div class="titleCocktail">
             <h3>{{cocktail.name}}</h3>
@@ -10,4 +10,4 @@
     </div>
 
 
-</div>
+</article>
